reversed dependencies of gradle-xml-plugin -> gradle-ooxml-plugin